// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapseSubscriptionGroupButton renders CollapseSubscriptionGroupButton collapsed 1`] = `
<Icon
  className="collapse-subscription-group-button"
  name="angle-right"
  onClick={[Function]}
  type="fa"
/>
`;

exports[`CollapseSubscriptionGroupButton renders CollapseSubscriptionGroupButton opened 1`] = `
<Icon
  className="collapse-subscription-group-button"
  name="angle-down"
  onClick={[Function]}
  type="fa"
/>
`;
